# Paper-Reader-Tools

./: .gitignore  Dockerfile  Dockerfile.streamlit  README.md  cli_enhanced.py  docker-compose.dev.yml  docker-compose.yml  docker-entrypoint.sh  docker-pull.sh  init_db.py  pyproject.toml
.streamlit/: config.toml
data/: papers.db  vectors.db
output/: AI-native-Memory-20-Second-Me.md  Equality-in-Online-Education-during-COVID-19-Challenging-the-Educational-Needs-of-Ethnic-Minority-St.md  Generative-Agents-Interactive-Simulacra-of-Human-Behavior.md
paper_reader_tools/: __init__.py  __main__.py  analysis.py  auth.py  cli.py  streamlit_app.py  vector_search.py
paper_reader_tools/api/: __init__.py  models.py  server.py
paper_reader_tools/repository/: __init__.py  collection_repository.py  paper_repository.py
paper_reader_tools/services/: __init__.py  ai_client.py  extractor.py  pdf_generator.py  utils.py
paper_reader_tools/ui/: __init__.py  api_client.py
paper_reader_tools/ui/pages/: __init__.py  about_page.py  add_paper_page.py  collection_page.py  library_page.py  search_page.py
test_output/: Attention-Is-All-You-Need.md
